[package]
name = "box-macro"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"
repository = "https://github.com/djmcgill/box-macro"
description = "Literally just the macro `box_!` which is `Box::new`"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
